--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-streamlit = "*"
 pandas = "*"
 plotly = "*"
 scikit-learn = "*"
+streamlit-nightly = "*"
 
 [dev-packages]
 
